# backend

./: .env  Cargo.toml  REF.md
migrations/: 20260115150800_create_approval_requests.sql  20260116055239_create_templates_table.sql  20260116064733_create_approval_logs_table.sql  20260116070138_create_users_and_departments.sql  20260116071400_seed_initial_admin_and_org.sql
src/: lib.rs  main.rs
src/domain/: approval.rs  mod.rs  template.rs  user.rs
src/handlers/: approval_handler.rs  auth_handler.rs  mod.rs  org_handler.rs  template_handler.rs
src/repositories/: approval_repository.rs  mod.rs  template_repository.rs  user_repository.rs
src/utils/: auth.rs  middleware.rs
tests/: approval_test.rs
